<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/card_view"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="@dimen/_5dp"
  android:layout_marginBottom="@dimen/_5dp"
  android:layout_marginStart="@dimen/_5dp"
  android:layout_marginEnd="@dimen/_5dp"
  app:cardCornerRadius="@dimen/_5dp">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8dp">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_title"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pull_title"
      android:textColor="@color/_444444"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_value_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="title title title title title title title title title title title title title title title title title title title"
      android:textColor="@color/_444444"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_title"
      app:layout_constraintTop_toTopOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_pr_number"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pr_number"
      android:textColor="@color/_444444"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_title"
      app:layout_constraintTop_toTopOf="@id/tv_value_pr_number" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_value_pr_number"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_5dp"
      android:text="Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number Pr Number"
      android:textColor="@color/_444444"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_pr_number"
      app:layout_constraintTop_toBottomOf="@id/tv_value_title" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_pull_status"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pull_status"
      android:textColor="@color/_444444"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_pr_number"
      app:layout_constraintTop_toTopOf="@+id/tv_value_pull_status" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_value_pull_status"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_5dp"
      android:drawablePadding="@dimen/_5dp"
      android:text="Pull status Pull status Pull status Pull status Pull status Pull status Pull status Pull status Pull status Pull status Pull status"
      android:textColor="@color/_444444"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_pull_status"
      app:layout_constraintTop_toBottomOf="@id/tv_value_pr_number" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_created"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/created"
      android:textColor="@color/_444444"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_pull_status"
      app:layout_constraintTop_toTopOf="@+id/tv_value_created" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_value_created"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_5dp"
      android:text="Created Created Created Created Created Created Created Created Created Created Created Created Created Created Created Created Created"
      android:textColor="@color/_444444"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_created"
      app:layout_constraintTop_toBottomOf="@id/tv_value_pull_status" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>